--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - pip install --upgrade awscli
-      - aws cloudformation package --template api_template/demo_sam.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
+      - aws cloudformation package --template api_template/sam_demo.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
 artifacts:
   type: zip
   files:
