--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,13 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Packaging SAM to CloudFormatino template
+      
+      # Use AWS SAM to package the application by using AWS CloudFormation
       - aws cloudformation package --template api_template/sam_demo.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
+      
+      # Do not remove this statement. This command is required for AWS CodeStar projects.
+      # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
+      - sed -i.bak 's/\$PARTITION\$/'${PARTITION}'/g;s/\$AWS_REGION\$/'${AWS_REGION}'/g;s/\$ACCOUNT_ID\$/'${ACCOUNT_ID}'/g;s/\$PROJECT_ID\$/'${PROJECT_ID}'/g' template-configuration.json
   post_build:
     commands:
       - echo Build completed on `date`
@@ -17,3 +23,4 @@ artifacts:
   type: zip
   files:
     - template-export.yml
+    - template-configuration.json
